--- a/app/src/main/res/layout/activity_container_test.xml
+++ b/app/src/main/res/layout/activity_container_test.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ContainerTestActivity">
-<LinearLayout
+<ListView
     android:orientation="vertical"
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+</ListView>
 </android.support.constraint.ConstraintLayout>
