--- a/app/src/main/res/layout/activity_reservas_conductor.xml
+++ b/app/src/main/res/layout/activity_reservas_conductor.xml
@@ -5,5 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ReservasConductorActivity">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <RelativeLayout
+        android:id="@+id/datos_viaje_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+    </RelativeLayout>
+    <TextView
+        android:text="Reservas:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <ListView
+        android:orientation="vertical"
+        android:id="@+id/reservas_viaje_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
+
+</LinearLayout>
 </android.support.constraint.ConstraintLayout>
