--- a/app/src/main/res/layout/fragment_viajes_creados_element.xml
+++ b/app/src/main/res/layout/fragment_viajes_creados_element.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/element_main_layout"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".ViajesCreadosElement">
+    android:layout_height="wrap_content">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/origen"
-        android:gravity="start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Origen" />
