--- a/app/src/main/res/layout/activity_crearviaje.xml
+++ b/app/src/main/res/layout/activity_crearviaje.xml
@@ -72,7 +72,7 @@
         android:ems="10"
         android:hint="Destino"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/confirmar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textOrigen"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textHora" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/confirmar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="42dp"
