--- a/app/src/main/res/layout/activity_crearviaje.xml
+++ b/app/src/main/res/layout/activity_crearviaje.xml
@@ -100,4 +100,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDestino" />
 
+    <Button
+        android:id="@+id/mapita"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="37dp"
+        android:text="Ver Mapa"
+        app:layout_constraintBottom_toBottomOf="@+id/confirmar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/confirmar" />
+
 </android.support.constraint.ConstraintLayout>
