--- a/app/src/main/res/layout/activity_container_test.xml
+++ b/app/src/main/res/layout/activity_container_test.xml
@@ -4,12 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContainerTestActivity">
+    tools:context=".ViajesCreadosActivity"
+
+    android:background="@drawable/card_background">
 <ListView
     android:orientation="vertical"
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:divider="@null"
+    >
 
 </ListView>
 </android.support.constraint.ConstraintLayout>
