--- a/app/src/main/res/layout/fragment_viajes_creados_element.xml
+++ b/app/src/main/res/layout/fragment_viajes_creados_element.xml
@@ -1,31 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+
+    android:background="@drawable/card_item">
 
     <TextView
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="6dp"
         android:id="@+id/origen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:text="Origen" />
     <TextView
-        android:layout_marginStart="10pt"
-        android:id="@+id/destino"
+        android:id="@+id/separador"
+
+        android:layout_marginTop="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/origen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Destino" />
+        android:text=" -> " />
     <TextView
+
+        android:id="@+id/destino"
+        android:layout_marginTop="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/separador"
+        android:text="Destino" />
+
+    <TextView
+
         android:id="@+id/fecha"
-        android:text="15/07/2018 15:00:00"
-        android:layout_below="@+id/destino"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+        android:layout_below="@+id/origen"
+        android:text="15/07/2018 15:00:00" />
 
     <TextView
         android:id="@+id/vehiculo"
         android:text="Marca1 Modelo1"
 
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="6dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -33,9 +54,11 @@
         android:gravity="right" />
     <TextView
         android:layout_width="wrap_content"
+        android:layout_marginEnd="6dp"
         android:layout_height="wrap_content"
         android:id="@+id/equipajemax"
         android:text="15 maletas"
         android:layout_alignParentEnd="true"
+        android:layout_marginBottom="5dp"
         android:layout_below="@id/vehiculo" />
 </RelativeLayout>
