--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,13 @@
             android:id="@+id/miboton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Crear viaje" />
+        <Button
+            android:onClick="verViajesCreadosClick"
+            android:id="@+id/ver_viajes_creados"
+            android:layout_width="wrap_content"
+            android:text="Ver viajes creados"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
