--- a/app/src/main/res/layout/activity_crearviaje.xml
+++ b/app/src/main/res/layout/activity_crearviaje.xml
@@ -53,7 +53,7 @@
     <EditText
         android:id="@+id/textOrigen"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
         android:ems="10"
         android:hint="Origen"
@@ -66,9 +66,9 @@
     <EditText
         android:id="@+id/textDestino"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="11dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="76dp"
+        android:layout_marginEnd="11dp"
         android:ems="10"
         android:hint="Destino"
         android:inputType="textPersonName"
