--- a/app/src/main/res/anim/agitar.xml
+++ b/app/src/main/res/anim/agitar.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <rotate
-        android:duration="50"
-        android:fromDegrees="-5"
-        android:pivotX="50%"
-        android:pivotY="50%"
-        android:repeatCount="5"
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+
+    <translate
+        android:repeatCount="10"
         android:repeatMode="reverse"
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        android:toDegrees="5" />
+        android:fromXDelta="-15"
+        android:duration="50"
+        android:toXDelta="15"/>
 
 </set>
