--- a/app/src/main/res/layout/activity_crearviaje.xml
+++ b/app/src/main/res/layout/activity_crearviaje.xml
@@ -28,8 +28,8 @@
         android:id="@+id/textHora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
         android:layout_marginStart="16dp"
+        android:layout_marginBottom="11dp"
         android:ems="10"
         android:hint="Ingrese Hora"
         android:inputType="time"
@@ -41,9 +41,8 @@
         android:id="@+id/textFecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="11dp"
         android:ems="10"
         android:hint="Ingrese fecha del viaje"
         android:inputType="date"
@@ -55,12 +54,12 @@
         android:id="@+id/frame1"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/frame2"
-        app:layout_constraintTop_toTopOf="@+id/frame2">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <fragment
             android:id="@+id/forigen"
@@ -76,12 +75,15 @@
         android:id="@+id/frame2"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/frame1"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/frame1">
 
         <fragment
             android:id="@+id/fdestino"
@@ -97,9 +99,8 @@
         android:id="@+id/textView"
         android:layout_width="139dp"
         android:layout_height="38dp"
-        android:layout_marginBottom="12dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="12dp"
         android:text="Ingrese ciudades"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textDestino"
@@ -110,10 +111,22 @@
         android:id="@+id/confirmar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Continuar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="186dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginTop="8dp"
+        android:text="Confirmar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frame2" />
+
+    <Button
+        android:id="@+id/mapita"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="37dp"
+        android:text="Ver Mapa"
+        app:layout_constraintBottom_toBottomOf="@+id/confirmar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/confirmar" />
 
 </android.support.constraint.ConstraintLayout>
