--- a/app/src/main/res/layout/fragment_viajes_creados_element.xml
+++ b/app/src/main/res/layout/fragment_viajes_creados_element.xml
@@ -61,4 +61,9 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="5dp"
         android:layout_below="@id/vehiculo" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Terminar"
+        />
 </RelativeLayout>
