--- a/app/src/main/res/layout/activity_agregar_paradas.xml
+++ b/app/src/main/res/layout/activity_agregar_paradas.xml
@@ -34,6 +34,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/colorPrimary"
         android:elevation="3dp"
+        android:onClick="clickParada"
         android:src="@android:drawable/ic_menu_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
@@ -55,12 +56,13 @@
         app:layout_constraintTop_toTopOf="@+id/addparada" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/botonContinuar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:backgroundTint="@color/colorPrimary"
+        android:onClick="subir"
         android:text="Continuar"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
