--- a/app/src/main/res/layout/activity_elegir_viaje.xml
+++ b/app/src/main/res/layout/activity_elegir_viaje.xml
@@ -43,6 +43,7 @@
         android:focusable="false"
         android:hint="Hasta fecha"
         android:inputType="text|date"
+        android:selectAllOnFocus="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/fechainicio"
