--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,14 +42,24 @@
 
     <Button
         android:id="@+id/botonlogin"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:onClick="loguear"
-        android:text="Login"
-        app:layout_constraintEnd_toEndOf="@+id/textcontra"
-        app:layout_constraintRight_toRightOf="parent"
+        android:text="Pasajero"
+
         app:layout_constraintStart_toStartOf="@+id/textcontra"
+        app:layout_constraintTop_toBottomOf="@+id/textcontra" />
+
+    <Button
+        android:id="@+id/botonlogin2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:onClick="loguearConductor"
+        android:text="Conductor"
+        app:layout_constraintEnd_toEndOf="@+id/textcontra"
+        app:layout_constraintRight_toRightOf="@id/botonlogin"
         app:layout_constraintTop_toBottomOf="@+id/textcontra" />
 
     <TextView
