--- a/app/src/main/res/layout/fragment_viajes_reservados.xml
+++ b/app/src/main/res/layout/fragment_viajes_reservados.xml
@@ -36,12 +36,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/origen" />
 
-    <Button
+    <ImageButton
         android:id="@+id/CancelButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
-        android:text="Cancelar Reserva"
+        android:src="@android:drawable/ic_delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
