--- a/app/src/main/res/layout/reserva_recibida_element.xml
+++ b/app/src/main/res/layout/reserva_recibida_element.xml
@@ -38,6 +38,14 @@
             android:text="destino" />
 
         <TextView
+            android:id="@+id/precio"
+            android:layout_marginHorizontal="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@+id/asientos"
+            android:text="$ calculando..." />
+
+        <TextView
             android:id="@+id/asientos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
